aws_internet_gateway.tf
# Provides a resource to create a VPC Internet Gateway.
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = var.app }
  depends_on = [
    aws_vpc.main
  ]
}
